# icaruswf

./: .gitignore  CMakeLists.txt  HepnosDataStore_service.cc  HepnosInput_source.cc  HepnosLoadData_module.cc  HepnosOutput_module.cc  HepnosSPOutput_module.cc  HepnosStoreDataNew_module.cc  HepnosStoreData_module.cc  MergeDataProds_module.cc  README.md  artdaq_fragment_serialization.h  buildicaruswf.sh  compare_hit.h  edge_serialization.h  envvariable.sh  events.txt  hit_serialization.h  pfparticle_serialization.h  rawdigit_serialization.h  root_file_paths_on_theta.txt  spacepoint_serialization.h  wire_serialization.h
balsam/: hepnos_apps.py  hepnos_apps_defs.py  hepnos_job_server.py  hepnos_jobs_remaining.py  job-template.sh  root_app.py  settings.yml  site_def.py
cmake/: FindTCLAP.cmake
fcl/: CMakeLists.txt  hf_hepnos.fcl  hf_hepnos.fcl.in  hf_root.fcl  hitfinding.fcl  hitfinding_hepnos.fcl  hitfinding_root.fcl  icarus_SH.fcl  icarus_SH_queue.fcl.in  icarus_demo.fcl  p_hepnos.fcl  p_hepnos.fcl.in  p_hepnos_root.fcl  p_hepnos_root.fcl.in  p_root.fcl  pandora.fcl  pandora_hepnos.fcl  pandora_root.fcl  reco0_psphf_hepnos.fcl.in  reco1_pp_hepnos.fcl.in  sh_root.fcl  signalprocessing.fcl  signalprocessing_hepnos.fcl  signalprocessing_root.fcl  sp_hepnos.fcl  sp_hepnos.fcl.in  sp_root.fcl  storedata.fcl  storedata.fcl.in  storedata_queue.fcl  storedata_queue.fcl.in
scripts/csresearch00/: run_icaruswf_hepnos_bench.sh  run_icaruswf_hepnos_mpi_dist_queue_bench.sh  run_icaruswf_hepnos_queue_bench.sh  run_icaruswf_root_bench.sh  run_icaruswf_root_mpi_dist_queue_bench.sh
scripts/theta/: run_art_using_files.sh  run_art_using_hepnos.sh  run_icaruswf_mpi_wrapper_bench.sh  run_icaruswf_root_mpi_wrapper_bench.sh
src/: CMakeLists.txt
src/modules/: CMakeLists.txt  EID.h  HepnosDataStore.h  HepnosDataStore_service.cc  HepnosInput_source.cc  HepnosOutput_module.cc  HepnosSPOutput_module.cc  HepnosStoreDataNew_module.cc  HepnosStoreData_module.cc  LoadbalancingInput_source.cc  LoadbalancingOutput_module.cc  Timestamp.h  Timestamp_service.cc  cheesyQueue_maker.cc  icaruswf_config.h.in  mpi_files_processor.cc  mpi_hepnos_processor.cc  mpi_loader.cc  mpi_numerology.py  mpi_wrapper.cc  mpicpp.hpp  root_mpi_wrapper.cc
src/serialization/: artdaq_fragment_serialization.h  cluster_serialization.h  edge_serialization.h  eid_serialization.h  hit_serialization.h  opdetwaveform_serialization.h  opflash_serialization.h  ophit_serialization.h  pcaxis_serialization.h  pfparticle_serialization.h  rawdigit_serialization.h  seed_serialization.h  shower_serialization.h  slice_serialization.h  spacepoint_serialization.h  track_serialization.h  trackhitmeta_serialization.h  utils.h  vertex_serialization.h  wire_serialization.h
test/: CMakeLists.txt  config.yaml  hepnos.json.in  hepnos_theta.json.in  main.cc  make_hit.h  rawdigit_hepnos.cc  test_artdaq_fragment.cc  test_cluster.cc  test_edge.cc  test_hepnos.cc  test_hepnosinput_source.fcl  test_hepnosstore_module.fcl  test_hit.cc  test_merge_module.fcl  test_opdetwaveform.cc  test_opflash.cc  test_ophit.cc  test_pcaxis.cc  test_pfparticle.cc  test_rawdigit.cc  test_rawdigit_hepnos.cc  test_seed.cc  test_shower.cc  test_slice.cc  test_spacepoint.cc  test_sparse_vector.cc  test_track.cc  test_trackhitmeta.cc  test_vertex.cc  test_wire.cc
wiki/: csresearch00.md  misc.md  spackbuild.md  theta.md  v09370102p02.md  v09370103p02.md
